# mapaUMWarszawa2GeoJSON

./: .gitignore  Makefile  README.md  convert-geojson.py  downloadTestMap.py  index.html  lefthook.yml  main.py  mapaUMWarszawa2GeoJSON.py  mapaUMWarszawa2GeoJSON_test.py  missingOsmTags.py  missingThemes.py  models.py  osmTags.py  pyproject.toml  requirements.in  requirements.txt  shell.nix  tests.py  themes.py  umToCSV.py  umWarszawa2GeoJSON.py  utils.py  utils_test.py
deduplicated/: A_AMBASADY_N.geojson  A_BIURA_URZEDU_N.geojson  A_JEDNOSTKI_ORG_URZEDU_N.geojson  A_KONSULATY.geojson  A_PLACOWKI_POCZTOWE.geojson  A_SADY.geojson  A_URZEDY_DZIELNIC_N.geojson  A_URZEDY_SKARBOWE.geojson  A_USC_N.geojson  BEZP_KAMERY_N.geojson  BEZP_POLICJA_N.geojson  BEZP_PSP_N.geojson  BEZP_STRAZ_MIEJSKA_N.geojson  BOS_ZIELEN_POMNIKI_NEW.geojson  HANDEL_STANOWISKA_POINT_N.geojson  HANDEL_TARGOWISKA_JEDN_POINT_N.geojson  HANDEL_TARGOWISKA_N.geojson  I_PLACE_ZABAW_POINT.geojson  I_TOALETY.geojson  KU_BIBLIOTEKI_N.geojson  KU_DOMY_KULTURY.geojson  KU_KINA_N.geojson  KU_MUZEA.geojson  KU_POMNIKI_ZKP.geojson  KU_SALE_KONCERTOWE.geojson  KU_TABLICE_ZKP.geojson  KU_TEATRY.geojson  K_DWORCE_KOLEJOWE_N.geojson  K_PARKOMATY_N.geojson  K_PROMY_N.geojson  K_PUNKTY_LADOWANIA_N.geojson  K_ZTM_BILETOMATY_KOLEJOWE_N.geojson  K_ZTM_BILETOMATY_STACJONARNE_N.geojson  ROWERY_SERWISY_ROWEROWE_N.geojson  ROWERY_STACJE_NAPRAW_N.geojson  ROWERY_STACJE_ROWEROWE.geojson  ROWERY_STOJAKI_ROWEROWE.geojson  S_BIEZNIE_OKOLNE_BU_N.geojson  S_BIEZNIE_PROSTE_BU_N.geojson  S_BULODROM_N.geojson  (+37 more)
templates/: index.j2
(+124 files in other folders)
